Latex writeup done

--- a/tables/arrests_by_racegender.tex
+++ b/tables/arrests_by_racegender.tex
@@ -1,6 +1,6 @@
 \begin{table}[H]
 
-\caption{Mean arrests in 2002 by Race and Gender}
+\caption{\label{tab:tab:summarystats}Mean arrests in 2002 by Race and Gender}
 \centering
 \begin{tabular}[t]{lrrrr}
 \toprule
