--- a/tables/regress_arrests_by_racegender.tex
+++ b/tables/regress_arrests_by_racegender.tex
@@ -1,27 +1,27 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Thu, Jan 13, 2022 - 10:28:21
+% Date and time: Thu, Jan 13, 2022 - 12:45:58
 \begin{table}[!htbp] \centering 
-  \caption{Regression Output of Total Arrests by Race and Gender} 
-  \label{} 
+  \caption{Regression Output. Omitted category is Black Females.} 
+  \label{tab:regression} 
 \begin{tabular}{@{\extracolsep{5pt}}lc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
  & \multicolumn{1}{c}{\textit{Dependent variable:}} \\ 
 \cline{2-2} 
-\\[-1.8ex] & total\_arrests \\ 
+\\[-1.8ex] & Arrests in 2002 \\ 
 \hline \\[-1.8ex] 
- raceHispanic & $-$0.055 \\ 
-  &  \\ 
+ Hispanic & $-$0.055$^{***}$ \\ 
+  & (0.019) \\ 
   & \\ 
- raceMixed Race (Non-Hispanic) & $-$0.084 \\ 
-  &  \\ 
+ Mixed Race (Non-Hispanic) & $-$0.084$^{*}$ \\ 
+  & (0.043) \\ 
   & \\ 
- raceNon-Black / Non-Hispanic & $-$0.056 \\ 
-  &  \\ 
+ Non-Black / Non-Hispanic & $-$0.056$^{***}$ \\ 
+  & (0.017) \\ 
   & \\ 
- genderMale & 0.134 \\ 
-  &  \\ 
+ Male & 0.134$^{***}$ \\ 
+  & (0.012) \\ 
   & \\ 
  Constant & 0.087$^{***}$ \\ 
   & (0.013) \\ 
