--- a/writing/paper.tex
+++ b/writing/paper.tex
@@ -22,6 +22,14 @@
 \usepackage{graphicx}
 \graphicspath{ {../figures/} }
 
+% make some hyperlinks using the \href command
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=black,
+    urlcolor=blue
+}
+
 % set the author, title, and date of the document. \maketitle adds it to the document.
 \author{Nathan Hattersley}
 \title{My Paper on NLSY97 Data}
@@ -47,7 +55,7 @@ $$
 
 Again, the \texttt{equation} environment is preferred because the begin and end delimiters are different.
 
-I can also add a bibliography, but this is beyond the scope of our discussion right now. Overleaf has plenty of resources for this on their website.
+I can also add a bibliography, but this is beyond the scope of our discussion right now. Overleaf has plenty of resources for this on their \href{https://www.overleaf.com/learn}{website}. Another good place to look for LaTeX help is the \href{https://en.wikibooks.org/wiki/LaTeX}{WikiBook} on it.
 
 \newpage
 
