Day one slides done

--- a/writing/rdemo_1.Rmd
+++ b/writing/rdemo_1.Rmd
@@ -4,7 +4,6 @@ author: "Nathan Hattersley"
 output: 
   ioslides_presentation:
     widescreen: true
-    logo: rdemo_assets/logo.png
     highlight: zenburn
 ---
 
@@ -17,8 +16,8 @@ knitr::opts_chunk$set(echo = TRUE, eval=FALSE)
 ## Agenda
 
 - Software Requirements
-- Project Structure
-- Notes on workflow
+- Project Structure and Setup
+- Some LaTeX
 - Some R Markdown
 
 # Software Requirements
@@ -26,100 +25,129 @@ knitr::opts_chunk$set(echo = TRUE, eval=FALSE)
 ## R and RStudio
 
 -   At least R 4.0.0, RStudio 1.4.0 recommended
--   No breaking changes afaik, but best to keep your software fresh
--   No need to install particular R packages, we will bootstrap with `librarian` (discussed later)
+-   You should always strive to keep your software updated to the latest stable version...
+-   Follow the instructions [here](https://www.rstudio.com/products/rstudio/download/#download) to download R and RStudio
 
-## Git et al.
+## Git and GitHub
 
--   `git` install on your local machine (you likely already have it)
+-   `git` is a command-line tool for version control. GitHub is a remote repository where you can store git projects.
+    - Most computers these days come with git already installed
+-   You will need to create an account with GitHub and configure `git` with your GH credentials
+    - The accepted way to do this has changed a lot over the past few years
+    - Comprehensive documentation [here](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/about-authentication-to-github) on authentication
+    - I used [GitHub CLI](https://cli.github.com/) (command-line interface) recently and liked it
+      - Download and run `gh auth login` followed by `gh auth setup-git`
+      
+## LaTeX
 
--   In addition, this project uses [`git-lfs`](https://git-lfs.github.com/) for large file storage
+- Typesetting software, plain text as opposed to the WYSIWYG style of Word
+- "Separates presentation from content"
+- Download [here](https://www.latex-project.org/get/), unfortunately it's 7 GB of stuff
 
-    -   You only need to download and it should work automatically
+# Projects in R
 
-# Project Structure
-
-## Top-level Directories
-
-- Separate folders for R code, data, figures, and writeups
-- Where possible, include README.md files as well as comments in your code to help others (and a future version of yourself) understand its purpose
-
-![](rdemo_assets/top-level.png)
-
-## R `build` Directory
-
-- `build` directory contains code that compiles "cleaned" datasets
-- Name of file should correspond to name of output `.csv.gz` file in data/
-
-![](rdemo_assets/build-directory.png)
-
-## R `describe` Directory
-
-- `describe` directory contains code for analysis, writeup, and making figures
-- Filenames starting with "graph" output figures and the names correspond to filenames in figures/
-- Other code is meant to be included as part of a writeup, and may generate `LaTeX` output using the `kbl` package
-
-![](rdemo_assets/describe-directory.png)
-
-## R `utils` Directory
-
-- `utils` contains utility functions that I want to use in other places
-- Filenames correspond to the exported function
-- Files in this directory are sourced in `.Rprofile`
-
-![](rdemo_assets/utils-directory.png)
-
-# Suggested R Workflow | Write Reproducible R Code!
-
-## Double click the `afg-scd-2021.Rproj` file
-### R Projects are standalone environments
-- Runs `.Rprofile` on startup—it loads your packages!
-- Nice RStudio git integration
+## Start with an .Rproj File
+- Contains project-level configuration settings
+- You can launch RStudio by double-clicking on the `.Rproj` file
 
 ### Encourages "modular" development
 - Don't pollute your workspace with stuff from other projects!
 - `.Rproj` files are loaded in a new RStudio instance
 
 ## `.Rprofile`
-- Startup script a la `.bashrc` and others
-- It just sources things
+- One of a number of "special" R files, [here's a list of them](https://support.rstudio.com/hc/en-us/articles/360047157094-Managing-R-with-Rprofile-Renviron-Rprofile-site-Renviron-site-rsession-conf-and-repos-conf)
+- Startup script which runs when you load a project
+- I use it to load all of the packages that I want to use.
+- This is what is in my `.Rprofile` file:
 ```{r, code = readLines(here(".Rprofile"))}
 ```
 
 ## `R/include.R` 
 - Uses [`librarian::shelf`](https://cran.r-project.org/web/packages/librarian/vignettes/intro-to-librarian.html), which will automatically download packages for you if you don't have them
-- Also does assorted business like set up [logging](http://logging.r-forge.r-project.org/sample_session.php) and calls [`here::i_am`](https://here.r-lib.org/)
+  - FYI, recently had to do a clean install on a computer and ran into issues with the `systemfonts` package
+  - If you're having issues, I recommend installing this separately and NOT building from source when given the option
+- Also calls [`here::i_am`](https://here.r-lib.org/) so set up the `here` package
 
-### Quick Digression on `here`
+## `here` are my files
 - Once your RStudio starts up, you will see a message like this:
-  - here() starts at /Users/nate/workspace/afg-scd-2021
-- `here` should be used throughout the project to make referring to files easier!
-  - See example usage below for reading a data file (`R/describe/index_SAP_2019_corruption.R`):
-```{r, code = c(readLines(here("R/describe/index_SAP_2019_corruption.R"))[1], "[...]")}
+  - here() starts at /Users/nate/workspace/causal-inference-2022
+  - This is the `here::i_am` call
+- Afterwards you can use the `here` function to reference file paths relative to the root of your project
+  - If you'd ever struggled with relative/absolute paths in a project you will know how awesome this is
+- `here` should be used throughout the project to make referring to files easier
+  - See example usage below for reading a data file (`R/build/NLSY97_clean.R`):
+```{r, code = c(readLines(here("R/build/NLSY97_clean.R"))[6], "[...]")}
 ```
 
-## Quick Digression on Data Storage
-- `.csv.gz` is preferred storage format
-  - Other storage types are included in `.gitignore`, including `.dta`, `.csv`, `.xlsx`
-  - You can unzip to a `.csv` and inspect with Excel if you like
-  - Can even edit and save and use my `compress_csv` utility function to write back to `.csv.gz`
-  - Editing as per above is HIGHLY DISCOURAGED given it is not reproducible
-- [`vroom`](https://github.com/r-lib/vroom#vroom-) package is the new standard in reading delimited files
-  - Can read and write directly to compressed file types with great throughput
-  - Uses multiple threads, lazy access
+---
 
-## RStudio Git Integration
-- Good GUI for git interaction imo
-  - Handle commits, pulls, pushes, diffs, and reverts easily
-  - Can even selectively stage certain portions of a file for commit!
+![](rdemo_assets/stop-sign.png)
 
-![](rdemo_assets/git-panel.png)
+- Let's set up a project from scratch in RStudio
 
-## And Finally, A Word of Warning | Don't Save Workspace Data
+## Directory Structure
+
+- Separate folders for your R code, tables, figures, and any papers that you write
+
+## R `build` Directory
+
+- `build` directory contains code that compiles "cleaned" datasets
+- Name of file should correspond to name of output `.csv` file in data/
+
+![](rdemo_assets/build-directory.png){width=40%, height=40%}
+
+## R `output` Directory
+
+- `output` directory contains code that generates figures and tables
+- Filenames starting with "figure" output figures and the names correspond to filenames in figures/
+- Filenames starting with "table" output tables with either `kbl` or `stargazer` that are stored as .tex files in the tables/ folder
+
+![](rdemo_assets/describe-directory.png){width=60%, height=60%}
+
+## `writing` directory
+
+- Here is where you write your paper as a .tex file (more on LaTeX in a second)
+- Any additional one-pagers or slides could go in here
+- Use my `paper.tex` file as a guide for your own report
+- These slides are also in my `writing` directory
+
+## A Word of Warning | Don't Save Workspace Data
 - When you exit RStudio, you are presented with a dialog box asking if you would like to save your workspace data
 - Do NOT save your workspace data, ever!
 - It is antithetical to the concept of reproducible research
 - It is even included in `.gitignore` (for good reason!)
+
+# Some LaTeX
+
+## Resources
+
+- Overleaf has a guide at [https://www.overleaf.com/learn](https://www.overleaf.com/learn)
+- There is a WikiBook on LaTeX at [https://en.wikibooks.org/wiki/LaTeX](https://en.wikibooks.org/wiki/LaTeX)
+
+## Shameless Plug for Visual Studio Code
+
+- I use VS Code to edit LaTeX using the [LaTeX workshop](https://marketplace.visualstudio.com/items?itemName=James-Yu.latex-workshop), which has amazing [snippets](https://github.com/James-Yu/LaTeX-Workshop/wiki/Snippets#snippets-and-shortcuts) and [tools](https://github.com/James-Yu/LaTeX-Workshop/wiki/Compile) for building different types of files
+- VS Code is a general-purpose IDE (integrated development environment) where you can write code in any programming language
+![](rdemo_assets/VS Code.png){width=80%, height=80%}
+
+## Preamble {.smaller}
+- Start with `\documentclass{article}` (or another documentclass like book or report—see the list [here](https://en.wikibooks.org/wiki/LaTeX/Document_Structure))
+- Load packages that you need for your PDF
+  - Below are some packages in my `paper.tex` file
+  - Normally I just copy-paste from the last .tex file I wrote...
+- You also put the title, author, etc. of your paper here using, e.g. `\title{My Paper}`
+
+```{tex, code = c(readLines(here("writing/paper.tex"))[2:11],"","[etc...]")}
+```
+
+## The Document {.smaller}
+- Write your paper after `\begin{document}` and before `\end{document}`
+- As far as things you should know, equations, figures, and tables will suffice
+- Read my `paper.tex` file, which should be treated as a brief tutorial of all the commands you need for this assignment. Here is an example of the LaTeX above and the output below:
+```{tex, code = readLines(here("writing/paper.tex"))[47:50]}
+```
+![](rdemo_assets/latex-sample.png){width=80%, height=80%}
+- Advanced users: Check out the [subfiles](https://www.overleaf.com/learn/latex/Multi-file_LaTeX_projects) package for working with large projects
 
 # RMarkdown, Briefly | `.Rmd` and `.Rnw`
 
@@ -131,14 +159,14 @@ knitr::opts_chunk$set(echo = TRUE, eval=FALSE)
 
 ### Figures and Tables
 - Any calls to `ggplot` will be included—here are some [figure options](https://bookdown.org/yihui/rmarkdown/html-document.html#figure-options)
-- `kableExtra` is a nice package for tables. Here's a guide for [HTML](https://cran.r-project.org/web/packages/kableExtra/vignettes/awesome_table_in_html.html) and [LaTeX](https://haozhu233.github.io/kableExtra/awesome_table_in_pdf.pdf)
+- `kableExtra` can generate pretty HTML and LaTeX tables. Here's a guide for [HTML](https://cran.r-project.org/web/packages/kableExtra/vignettes/awesome_table_in_html.html) and [LaTeX](https://haozhu233.github.io/kableExtra/awesome_table_in_pdf.pdf)
 
 ## Output Formats
 - Dizzying array of output formats, from HTML to PDF to interactive notebooks, Word documents, Powerpoint documents, HTML5 slides, dashboards, Shiny apps, books, and even entire websites.
 - This document is an [ioslides presentation](https://bookdown.org/yihui/rmarkdown/ioslides-presentation.html), but I want to focus on [HTML](https://bookdown.org/yihui/rmarkdown/html-document.html) and [PDF](https://bookdown.org/yihui/rmarkdown/pdf-document.html) outputs
 - Both output types use `pandoc`, which is a tool for converting between documents of different languages
   - You can embed HTML in an `.Rmd` file you intend to knit to HTML, and you can embed TeX code in one you will knit to PDF
-  - For example, this start below is made with HTML code:
+  - For example, this star below is made with HTML code:
 <svg height="210" width="500">
   <g transform="translate(100, -40) scale(.75) rotate(30)">
     <polygon points="100,10 40,198 190,78 10,78 160,198" style="fill:yellow;stroke:black;stroke-width:5;fill-rule:nonzero;"/>
@@ -151,30 +179,22 @@ knitr::opts_chunk$set(echo = TRUE, eval=FALSE)
 - Has file extension `.Rnw` (which confusingly stands for "R noweb" after Donald Knuth's famous noweb)
 - Here is a [quick intro](https://rpubs.com/YaRrr/SweaveIntro)
 
-### Why this may be useful
-- If you are proficient with LaTeX you may prefer to write the report in TeX rather than markdown
-  - Full control over cites, floats, spacing, etc.
-- I use Visual Studio Code to edit `.Rnw` files
-  - Shameless plug for [LaTeX workshop](https://marketplace.visualstudio.com/items?itemName=James-Yu.latex-workshop) VS code extension, which has amazing [snippets](https://github.com/James-Yu/LaTeX-Workshop/wiki/Snippets#snippets-and-shortcuts) and [tools](https://github.com/James-Yu/LaTeX-Workshop/wiki/Compile#building-a-rnw-file) for building different `.Rnw` files
+## So should I do LaTeX or RMarkdown?
+- I love RMarkdown and think it is suited to many use cases
+- One where I think LaTeX is better is for large, multi-file projects
+- Force you to use LaTeX for this assignment, but you could write your entire research paper in RMarkdown if you really wanted
+
   
 ## Recap
-- You need to install `git-lfs`
-- Practice good R project hygiene
-- R Markdown is a great way to make reproducible reports
-  - Learn some HTML or LaTeX at the same time!
+- Make a GitHub account
+- Create an R Project in a GH Repository
+- Be a disciplined coder
+- Learn some LaTeX
 
-<svg height="220" width="500" style="float:right;margin-right:-15%">
-	<g transform="translate(150, 125)">
-    	<circle cx="0" cy="0" fill="yellow" stroke="black" r="90" stroke-width="5" />
-    </g>
-	<g transform="translate(105, 100)">
-  		<circle id="eye" cx="0" cy="0" fill="black" r="10"/>
-    </g>
-    <g transform="translate(195, 100)">
-    	<use xlink:href="#eye"/>
-    </g>
-    <g transform="translate(110, 150)">
-    	<path d="M 0,0
-        		 Q 40,50 80,0" stroke="black" fill="none" stroke-width="5"/>
-    </g>
-</svg>
+### Next time...
+- Tidy data
+- Plotting
+- Functional Programming
+
+### Next, next time...
+- Assorted helpful things
